aligned beatmap leaderboard correctly

--- a/html/css/beatmap.css
+++ b/html/css/beatmap.css
@@ -251,13 +251,28 @@
 
 .bm_leaderboard {
   margin-top: 20px;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
 }
 
 .bm_leaderboard_first_place {
   background: #5F474A;
-border: 1px solid #000000;
-box-sizing: border-box;
-box-shadow: inset 0px 4px 4px rgba(0, 0, 0, 0.25);
-border-radius: 15px;
-width: 1000px;
+  border: 1px solid #000000;
+  box-sizing: border-box;
+  box-shadow: inset 0px 4px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 15px;
+  width: 1210px;
+  height: 100px;
+}
+
+.bm_leaderboard_place {
+  background: #5F474A;
+  border: 1px solid #000000;
+  box-sizing: border-box;
+  box-shadow: inset 0px 4px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 15px;
+  width: 1210px;
+  height: 40px;
+  margin-top: 5px;
 }
